--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "~1.4.4",
     "cross-env": "^10.0.0",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "mongoose": "^8.17.1",
     "morgan": "~1.9.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.5",
     "uuid": "^11.1.0"
   }
